syntax = "proto3";

package proto;

message LibraryMessage {
  string name = 1;
  string path = 2;
}

message LibraryListMessage {
  repeated LibraryMessage libraries = 1;
}

message LibraryIndexMessage {
  repeated IndexEntryMessage index = 1;
}

message IndexEntryMessage {
  string hash = 1;
  string path = 2;
  string create_date = 3;
  int32 rating = 4;
  int32 orientation = 9;
}

message MetadataMessage {
  string hash = 1;
  string name = 2;
  string create_date = 3;
  int32 rating = 4;
  int32 width = 5;
  int32 height = 6;
  string make = 7;
  string exif = 8;
  int32 orientation = 9;
}

message ImageMessage {
  MetadataMessage metadata = 1;
  bytes image = 2;
}

message ThumbnailMessage {
  MetadataMessage metadata = 1;
  bytes image = 2;
}

message Message {
  optional int32 id = 1;
  optional string message = 2;
  optional bool error = 3;
  oneof msg {
      LibraryListMessage list = 5;
      LibraryIndexMessage index = 6;
      MetadataMessage metadata = 7;
      ImageMessage image = 8;
      ThumbnailMessage thumbnail = 9;
  }
}

message CreateLibraryMessage {
  string name = 1;
  string path = 2;
}

message RequestLibraryIndex {
  string name = 1;
}

message ClientMessage {
  optional int32 id = 1;
  oneof msg {
    CreateLibraryMessage create = 5;
    RequestLibraryIndex index = 6;
  }
}
